@@ -1,6 +1,7 @@
 nomacs 3.1.0
 ============
 - New preferences
+- Undo & History dock added
 - Statusbar improved (e.g. zoom level)
 - All Icons are SVG (UHD monitors)
 - Compression added to Batch
